--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ a {
 
 .wrapper-header {
     margin-top: 40px;
+    margin-bottom: 96px;
 }
 
 .header-nav {
@@ -128,8 +129,21 @@ a {
 }
 
 .header-content-title {
+    position: relative;
     width: 583px;
     padding-top: 61px;
+}
+
+.header-content-title::before {
+    content: "";
+    position: absolute;
+    top: 134px;
+    left: -20px;
+    background: rgba(0, 0, 0, 0);
+    border-radius: 50%;
+    width: 314px;
+    height: 76px;
+    border: 1px solid #F25822;
 }
 
 .header-img {
@@ -193,3 +207,170 @@ a {
     font-weight: 400;
     line-height: normal;
 }
+
+.advantages-head {
+    display: flex;
+    background: #FAFAFA;
+}
+
+
+.advantages-head-text h2 {
+    padding-top: 125px;
+    padding-bottom: 20px;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.advantages-head-text p {
+    width: 515px;
+    height: 72px;
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+}
+
+.advantages-head-text button {
+    margin-top: 35px;
+    border-radius: 50px;
+    padding: 16px 31px;
+    background: #F25822;
+    box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
+    border: none;
+    color: #FFF;
+    font-family: Gilroy-Bold;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.advantages-list {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+    padding-bottom: 100px;
+}
+
+.advantage-img {
+    padding-bottom: 25px;
+}
+
+.advantage-head {
+    padding-bottom: 17px;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.advantage-text {
+    width: 310px;
+    height: 42px;
+    margin-bottom: 25px;
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 22.5px */
+}
+
+.advantage-text-bold {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 16.5px */
+}
+
+.wrapper-services {
+    padding-top: 92px;
+    background: #FAFAFA;
+}
+
+.services-head {
+    padding-bottom: 19px;
+    text-align: center;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.services-text {
+    padding-bottom: 54px;
+    text-align: center;
+    color: #666;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+}
+
+.services-list {
+    display: flex;
+    padding-bottom: 100px;
+}
+
+.services-list-item {
+    width: 370px;
+    height: 549px;
+    margin-right: 30px;
+    background-color: #FFF;
+}
+
+.services-list-item-middle {
+    width: 370px;
+    height: 549px;
+    margin-right : 30px;
+    background-color: #FFF;
+    box-shadow: 15px 25px 60px -5px rgba(0, 0, 0, 0.10);
+}
+
+.service-head {
+    padding-bottom: 22px;
+    text-align: center;
+}
+
+.service-text {
+    margin-bottom: 39px;
+    text-align: center;
+    color: #AAA;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 22.5px */
+}
+
+.service-btn {
+    margin: 0 auto;
+    display: block;
+    padding: 15px 36px 15px 46px;
+    border-radius: 50px;
+    background: #F25822;
+    box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
+    border: none;
+    color: #FFF;
+    font-family: Gilroy-Bold;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
