--- a/style.css
+++ b/style.css
@@ -571,6 +571,10 @@ a {
     background: #FAFAFA;
 }
 
+.plans {
+    padding-bottom: 130px;
+}
+
 .plans-head {
     text-align: center;
     color: #000;
@@ -694,4 +698,110 @@ a {
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 105px */
+}
+
+.team {
+    padding-bottom: 100px;
+}
+
+.team-head {
+    padding-top: 83px;
+    padding-bottom: 12px;
+    text-align: center;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 67.5px */
+}
+
+.team-text {
+    padding-bottom: 52px;
+    text-align: center;
+    color: #666;
+    text-align: center;
+    font-family: Gilroy-Medium;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+}
+
+.team-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.team-list-item {
+    width: 270px;
+    height: 331px;
+    text-align: center;
+    border: 1px solid #EEE;
+}
+
+.team-item-photo {
+    margin-top: 50px;
+    margin-left: 70px;
+    margin-bottom: 14px;
+}
+
+.team-item-name {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 30px */
+}
+
+.team-item-prof {
+    margin-bottom: 17px;
+    color: #888;
+    font-family: Gilroy-Medium;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 19.5px */
+}
+
+.links-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.links-list-item {
+    padding-right: 15px;
+}
+
+.links-list-item img {
+    cursor: pointer;
+}
+
+.testimonials-head {
+    padding-top: 93px;
+    padding-bottom: 19px;
+    text-align: center;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.testimonials-text {
+    padding-bottom: 55px;
+    color: #666;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+}
+
+.testimonials-list {
+    display: flex;
 }
