--- a/style.css
+++ b/style.css
@@ -996,6 +996,115 @@ a {
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 16.5px */
-    
 }
 
+.wrapper-footer {
+    margin-bottom: 50px;
+}
+
+.footer {
+    padding-top: 97px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-logo {
+    width: 270px;
+}
+
+.footer-logo-text {
+    padding-bottom: 35px;
+    color: #666;
+    font-family: Gilroy-Medium;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%; /* 25.6px */
+}
+
+.footer-logo-img {
+    padding-bottom: 47px;
+}
+
+.footer-head {
+    padding-bottom: 34px;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%; /* 38.4px */
+}
+
+.footer-company-list-item, .footer-services-list {
+    color: #666;
+    font-family: Gilroy-SemiBold;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 230%; /* 36.8px */
+}
+
+.footer-contacts-list-item {
+    color: #666;
+    font-family: Gilroy-Medium;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.footer-links-list-item {
+    padding-right: 15px;
+    cursor: pointer;
+}
+
+.footer-links-list {
+    display: flex;
+    align-items: center;
+}
+
+.footer-company-list {
+    padding-left: 14px;
+}
+
+.footer-company-list-item{
+    padding-left: 14px;
+    position: relative;
+}
+
+.footer-company-list-item::before, .footer-services-list-item::before {
+    content: "";
+    position: absolute;
+    top: 16px;
+    left: 2px;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: #F25822;
+}
+
+.footer-services-list {
+    padding-left: 14px;
+}
+
+.footer-services-list-item {
+    padding-left: 14px;
+    position: relative;
+}
+
+.footer-contacts-list-item span {
+    color: #333;
+}
+
+.copyright-text {
+    padding-top: 19px;
+    padding-bottom: 19px;
+    color: #888;
+    font-family: Gilroy-Medium;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 230%; /* 36.8px */
+    text-align: center;
+}
